--- a/adopCat.html
+++ b/adopCat.html
@@ -3,58 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Ayuda a un peludo</title>
+    <!--Css-->
+    <link rel="stylesheet" href="style.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!--Font awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <!--Css-->
-    <link rel="stylesheet" href="perfilCat.html">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--titulo principal-->
-    <div class="titulo">
+    <div class="tituloCat">
         <header>
-            <h1>ONG - AYUDA A UN PELUDO</h1>
+            <h1>GATOS EN ADOPCION</h1>
         </header>
     </div>
     <!--parrafo principal-->
-    <div class="parrafoUno col-md-8">
+    <div class="parrafoCat col-md-8">
         <p>
             <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nesciunt minima id blanditiis, velit maiores molestias quae provident ad aspernatur necessitatibus consequuntur voluptatum adipisci obcaecati perferendis illo corrupti dolores nihil esse. Porro explicabo sequi tempora voluptas repellat aperiam neque provident, hic dolores incidunt beatae vel deleniti eaque doloremque error. Sint quam amet tempore et maiores, quibusdam excepturi consectetur asperiores quas hic eum consequuntur, voluptatibus dolores qui voluptates maxime voluptate aperiam quis. Assumenda sit mollitia tempore totam odit vitae quo laborum nemo. Ullam quam minima accusantium dolor asperiores id itaque laborum quos! Minima ducimus dignissimos porro corporis aperiam, temporibus maxime voluptates dolor quo distinctio sapiente optio maiores, ea molestiae expedita laborum reiciendis veritatis ullam, quisquam qui unde dolorem aut! Similique quam facilis, aut sint consequatur saepe accusamus quo eligendi ad temporibus id eaque nostrum esse, nisi asperiores fugit ipsam, illum natus laboriosam quae. Nemo optio harum maiores debitis tempore aspernatur soluta eaque blanditiis impedit animi, commodi nostrum, quas voluptatem vel dolores assumenda officia. Fugit inventore quos dolore consequatur esse omnis in? Animi, eaque molestiae quasi magnam nulla assumenda quae quibusdam facere repellat culpa enim amet maiores officia in temporibus? In itaque modi id fuga molestias obcaecati totam aperiam nobis rem exercitationem?</h6>
         </p>
     </div>
     <!--subtitulo uno-->
-    <div class="subtituloUno">
+    <div class="subtituloCat">
         <h2>
-            Nuestros Integrantes:
+            Nuestros Gatos que buscan familia:
         </h2>
-    </div>
-    <div class="listaUno">
-        <ul>
-            <h6>
-                <li>Persona 1 - Cargo 1</li>
-                <li>Persona 2 - Cargo 2</li>
-                <li>Persona 3 - Cargo 3</li>
-                <li>Persona 4 - Cargo 4</li>
-            </h6>
-        </ul>
-    </div>
-    <!--subtitulo dos-->
-    <div class="subtituloDos">
-        <h2>
-            Nuestras secciones de ayuda:
-        </h2>   
     </div>
     <!--Imagenes-->
     <div class="perro card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="imagen/perro.jpg" class="img-fluid rounded-start" alt="...">
+            <img src="imagen/Gatos/Carlota.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
                 <p class="card-text-perro">
-                    <a href="adopDog.html">Perritos.</a>
+                    <a href="#openModalUno">Carlota.</a>
                 </p>
             </div>
           </div>
@@ -63,16 +45,61 @@
     <div class="gato card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="imagen/gato.jpg" class="img-fluid rounded-start" alt="...">
+            <img src="imagen/Gatos/Paloma.jpg" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
                 <p class="textCat card-text">
-                    <a href="adopCat.html">Gatitos.</a> 
+                    <a href="#openModalDoS">Paloma.</a> 
                  </p>
             </div>
           </div>
         </div>
+    </div>
+    <div class="gato card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="imagen/Gatos/Zeus.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+                <p class="textCat card-text">
+                    <a href="#openModalTres">Zeus.</a> 
+                 </p>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!--Modal-->
+    <div id="openModalUno" class="modalDialog">
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>CARLOTA</h2>
+        <p>Edad: 2 años</p>
+        <p>Genero: Hembra</p>
+        <p>Esterilizado: Si</p>
+        <p>N° Chip: 11111111</p>
+      </div>
+    </div>
+    <div id="openModalDoS" class="modalDialog">
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>PALOMA</h2>
+        <p>Edad: 4 años</p>
+        <p>Genero: Hembra</p>
+        <p>Esterilizado: Si</p>
+        <p>N° Chip: 2222222</p>
+      </div>
+    </div>
+    <div id="openModalTres" class="modalDialog">
+      <div>
+        <a href="#close" title="Close" class="close">X</a>
+        <h2>ZEUS</h2>
+        <p>Edad: 2 Meses</p>
+        <p>Genero: Macho</p>
+        <p>Esterilizado: Si</p>
+        <p>N° Chip: 333333</p>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
